# lib-sql-translator

./: .gitignore  .travis.yml  LICENSE  README.md  configure.ac
src/: Constraint.cpp  Field.cpp  Index.cpp  Makefile.am  Object.cpp  Table.cpp  sqltranslator.cpp
src/sqltranslator/: Constraint.h  Field.h  Index.h  Object.h  Table.h
test/: Constraint_test.cpp  Field_test.cpp  Index_test.cpp  Makefile.am  Object_test.cpp  Table_test.cpp
